force-app/main/default/objects/Contact/fields/AllThreeNetworks__c.field-meta.xml
<CustomField>
    <fullName>AllThreeNetworks__c</fullName>
    <label>AllThreeNetworks</label>
    <length>30</length>
    <type>Text</type>
</CustomField>