force-app/main/default/objects/Contact/fields/AntiSocial__c.field-meta.xml
<CustomField>
    <fullName>AntiSocial__c</fullName>
    <label>AntiSocial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>