force-app/main/default/objects/Contact/fields/FaceBookID__c.field-meta.xml
<CustomField>
    <fullName>FaceBookID__c</fullName>
    <label>FaceBookID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>