force-app/main/default/objects/Contact/fields/LinkedinID__c.field-meta.xml
<CustomField>
    <fullName>LinkedinID__c</fullName>
    <label>LinkedinID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>