force-app/main/default/objects/Contact/fields/LinksAndLikes__c.field-meta.xml
<CustomField>
    <fullName>LinksAndLikes__c</fullName>
    <label>LinksAndLikes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>