force-app/main/default/objects/Contact/fields/TwitsAndLikes__c.field-meta.xml
<CustomField>
    <fullName>TwitsAndLikes__c</fullName>
    <label>TwitsAndLikes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>