force-app/main/default/objects/Contact/fields/TwitsAndLinks__c.field-meta.xml
<CustomField>
    <fullName>TwitsAndLinks__c</fullName>
    <label>TwitsAndLinks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>