force-app/main/default/objects/Contact/fields/TwitterID__c.field-meta.xml
<CustomField>
    <fullName>TwitterID__c</fullName>
    <label>TwitterID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>